# hidden-jobs-worker

./: .env.example  .gitignore  README.md  pyproject.toml
.ai/: context.md  security-checklist.md  worker-rules.md
.github/workflows/: python-ci.yml
agents/: PYTHON_ENGINEER.md  QE_REVIEWER.md  SCRAPER_ENGINEER.md  SECURITY_REVIEWER.md  SENIOR_REVIEWER.md
discovery/seeds/: companies.yml
docs/: ARCHITECTURE.md  INGESTION_CONTRACT.md  LOOP_ENGINEERING.md  SOURCE_STRATEGY.md  SRS.md
src/hidden_jobs_worker/: __init__.py  cli.py  config.py  ingestion.py  logging.py  models.py  registry.py  runner.py
src/hidden_jobs_worker/adapters/: __init__.py  ashby.py  ats.py  base.py  comeet.py  common.py  greenhouse.py  lever.py  manager.py  personio.py  recruitee.py  remotive.py  smartrecruiters.py  teamtailor.py  workable.py
src/hidden_jobs_worker/discovery/: __init__.py  ats_detector.py  board_verifier.py  careers_finder.py  engine.py  registration.py  seeds.py
tests/: test_ats_adapters.py  test_cli.py  test_config.py  test_discovery.py  test_ingestion.py  test_models.py  test_registry.py  test_remotive_adapter.py  test_runner.py
