[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hidden-jobs-worker"
version = "0.1.0"
description = "Python worker for discovering jobs and sending them to the Hidden Jobs ingestion API."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0,<1.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.3.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<9.0.0",
    "ruff>=0.5.0,<1.0.0",
]

[project.scripts]
hidden-jobs-worker = "hidden_jobs_worker.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hidden_jobs_worker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
